Fixing alignment of MemberTable for small devices.

--- a/src/main.css
+++ b/src/main.css
@@ -86,8 +86,8 @@ body h2 {
   transform: translate(-50%);
   height: 80px;
   width: 80px;
-  margin-top: 40px;
-  margin-bottom: 10px;
+  margin-top: 2%;
+  margin-bottom: 2%;
   color: rgb(50,205,50);  
   line-height: 80px;
   font-size: 40px;
